--- a/006-hook/src/index.css
+++ b/006-hook/src/index.css
@@ -5,3 +5,13 @@ body {
 button {
     margin-right: 5px;
 }
+
+header > .container {
+    display: flex;
+    align-items: baseline;
+    max-width: 980px;
+    margin: 0 auto;
+    padding-top: 1rem;
+    transition: all 0.2s ease;
+}
+
