cambiar a boostrap para segir bien el curso

--- a/006-hook/src/index.css
+++ b/006-hook/src/index.css
@@ -1,5 +1,16 @@
 body {
     padding: 20px;
+    background-color: #0b0b26;
+}
+
+h1, h2, h3, li, p {
+    color: aliceblue;
+
+}
+
+ul{
+    list-style: none;
+   counter-reset: item;
 }
 
 button {
