--- a/006-hook/src/index.css
+++ b/006-hook/src/index.css
@@ -3,7 +3,7 @@ body {
     background-color: #0b0b26;
 }
 
-h1, h2, h3,h4, li, p {
+h1, h2, h3,h4, li, p, pre {
     color: aliceblue;
 
 }
@@ -26,3 +26,6 @@ header > .container {
     transition: all 0.2s ease;
 }
 
+a {
+    margin-right: 5px;
+}
